--- a/public/index.html
+++ b/public/index.html
@@ -3,160 +3,145 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Budget - Free Budget Tracker App for Managing Finances</title>
-    <meta name="description" content="A free personal budget app to track your finances and manage your spending.">
-    <meta name="keywords" content="app, free, budget, finance, money, tracker">
-    
+    <title>Personal Budget</title>
+
+    <!-- This is an SEO Change -->
+    <meta name="description" content="Track and manage your personal budget with this easy-to-use app. Free, secure, and efficient budgeting tool to stay on top of your finances.">
+
+    <!-- This is an SEO Change -->
+    <meta name="keywords" content="personal budget, finance management, budgeting tool, expenses tracker, money management, free app">
+
+    <!-- This is an SEO Change -->
+    <meta name="author" content="Fabio Nolasco">
+
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="main.css">
     <style>
-        /* Basic reset */
-        * {
+        body {
+            font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            box-sizing: border-box;
+            background-color: #f4f7f6;
         }
 
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f4f4f9;
-            color: #333;
-        }
-
-        /* Skip to content link */
-        .skip {
-            position: absolute;
-            top: -40px;
-            left: 0;
-            background-color: #333;
+        header.hero {
+            background-color: #3498db;
             color: white;
-            padding: 10px;
-            z-index: 1000;
-        }
-
-        .skip:focus {
-            top: 10px;
-        }
-
-        /* Hero section */
-        .hero {
             text-align: center;
-            padding: 50px;
-            background-color: #00aaff;
-            color: white;
-            border-bottom: 5px solid #005f73;
+            padding: 50px 20px;
+            border-bottom: 5px solid #2980b9;
         }
 
-        .hero h1 {
-            font-size: 2.5rem;
+        header.hero h1 {
+            font-size: 3em;
+            margin: 0;
         }
 
-        .hero h2 {
-            font-size: 1.5rem;
-            margin-top: 10px;
+        header.hero h2 {
+            font-size: 1.5em;
+            margin: 10px 0 0;
         }
 
-        /* Navigation */
         nav {
-            background-color: #333;
-        }
-
-        nav ul {
-            display: flex;
-            justify-content: center;
-            list-style: none;
+            background-color: #2c3e50;
             padding: 15px;
         }
 
         nav a {
             color: white;
+            margin-right: 20px;
             text-decoration: none;
-            padding: 10px 20px;
-            font-size: 1rem;
         }
 
         nav a:hover {
-            background-color: #005f73;
-            border-radius: 5px;
+            text-decoration: underline;
         }
 
-        /* Main content */
-        main {
-            padding: 40px 20px;
-            text-align: center;
+        main.center {
+            max-width: 1100px;
+            margin: 30px auto;
+            padding: 20px;
+            background-color: white;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
 
         .page-area {
-            max-width: 1200px;
-            margin: 0 auto;
             display: grid;
-            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-columns: repeat(2, 1fr);
             gap: 20px;
         }
 
-        article {
-            background-color: #fff;
+        .page-area article {
+            background-color: #ecf0f1;
             padding: 20px;
             border-radius: 8px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
         }
 
-        article h1 {
-            font-size: 1.5rem;
-            margin-bottom: 10px;
+        .page-area article h1 {
+            font-size: 2em;
+            color: #2980b9;
         }
 
-        article p {
-            font-size: 1rem;
-            line-height: 1.6;
-        }
-
-        /* Footer */
-        footer {
-            background-color: #333;
+        .bottom {
+            background-color: #34495e;
             color: white;
             text-align: center;
             padding: 20px;
             margin-top: 40px;
         }
 
-        footer a {
-            color: #00aaff;
+        .skip {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            background-color: #2980b9;
+            color: white;
+            padding: 10px;
+            text-decoration: none;
         }
 
-        /* Chart area */
-        canvas {
-            max-width: 100%;
-            height: auto;
+        .skip:focus {
+            outline: none;
+            background-color: #1f6d99;
+        }
+
+        .center p {
+            font-size: 1.1em;
+            color: #333;
         }
     </style>
 </head>
 <body>
 
+<a href="#main" class="skip">Skip to content</a>
+
 <!-- This is an A11y Change -->
-<a href="#main" class="skip" aria-label="Skip to main content">Skip to content</a>
-
-<!-- This is a Semantic HTML Change -->
-<section class="hero">
-    <h1>Personal Budget</h1>
-    <h2>A personal-budget management app</h2>
-</section>
-
-<!-- This is a Semantic HTML Change -->
-<nav>
+<nav aria-label="Main Navigation">
     <ul>
-        <li><a href="/" aria-label="Go to home page">Home</a></li>
-        <li><a href="/about.html" aria-label="Go to About page">About</a></li>
-        <li><a href="/login.html" aria-label="Go to Login page">Login</a></li>
-        <li><a href="https://google.com" aria-label="Go to Google">Google</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/about.html">About</a></li>
+        <li><a href="/login.html">Login</a></li>
+        <li><a href="https://google.com">Google</a></li>
     </ul>
 </nav>
 
 <!-- This is a Semantic HTML Change -->
-<main class="center" id="main">
-    <div class="page-area">
+<header class="hero">
+    <h1>Personal Budget</h1>
+    <h2>A personal-budget management app</h2>
+</header>
 
-        <!-- This is a Semantic HTML Change -->
+<main class="center" id="main">
+
+    <!-- This is an SEO Change -->
+    <h1>Manage Your Budget Effectively</h1>
+
+    <!-- This is a Semantic HTML Change -->
+    <section class="page-area">
+
         <article>
-            <h1>Stay on track</h1>
+            <!-- This is an A11y Change -->
+            <h1 role="heading">Stay on track</h1>
             <p>
                 Do you know where you are spending your money? If you really stop to track it down,
                 you would get surprised! Proper budget management depends on real data... and this
@@ -165,44 +150,45 @@
         </article>
 
         <article>
-            <h1>Alerts</h1>
+            <h1 role="heading">Alerts</h1>
             <p>
                 What if your clothing budget ended? You will get an alert. The goal is to never go over the budget.
             </p>
         </article>
 
         <article>
-            <h1>Results</h1>
+            <h1 role="heading">Results</h1>
             <p>
                 People who stick to a financial plan, budgeting every expense, get out of debt faster!
-                Also, they live happier lives... since they spend without guilt or fear...
+                Also, they live happier lives... since they spend without guilt or fear... 
                 because they know it is all good and accounted for.
             </p>
         </article>
 
         <article>
-            <h1>Free</h1>
+            <h1 role="heading">Free</h1>
             <p>
                 This app is free!!! And you are the only one holding your data!
             </p>
         </article>
 
-        <!-- This is a Semantic HTML Change -->
         <article>
-            <h1>Chart</h1>
+            <h1 role="heading">Chart</h1>
             <p>
-                <canvas id="myChart" width="400" height="400" aria-label="Budget distribution chart"></canvas>
+                <!-- This is an SEO Change -->
+                <canvas id="myChart" width="400" height="400" aria-label="Budget distribution chart" role="img"></canvas>
             </p>
         </article>
 
-    </div>
+    </section>
+
 </main>
 
 <!-- This is a Semantic HTML Change -->
 <footer class="bottom">
-    <div class="center">
-        All rights reserved &copy; Fabio Nolasco | <a href="https://github.com/your-repo" target="_blank">GitHub</a>
-    </div>
+    <section class="center">
+        <p>All rights reserved &copy; Fabio Nolasco</p>
+    </section>
 </footer>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.20.0/axios.min.js" integrity="sha512-quHCp3WbBNkwLfYUMd+KwBAgpVukJu5MncuQaWXgCrfgcxCJAq/fo+oqrRKOj+UKEmyMCG3tb8RB63W+EmrOBg==" crossorigin="anonymous"></script>
