--- a/public/index.html
+++ b/public/index.html
@@ -3,192 +3,95 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Budget</title>
-
-    <!-- This is an SEO Change -->
-    <meta name="description" content="Track and manage your personal budget with this easy-to-use app. Free, secure, and efficient budgeting tool to stay on top of your finances.">
-
-    <!-- This is an SEO Change -->
-    <meta name="keywords" content="personal budget, finance management, budgeting tool, expenses tracker, money management, free app">
-
-    <!-- This is an SEO Change -->
+    <title>Personal Budget - Manage Your Finances</title>
+    <meta name="description" content="A free personal budget app to help you track and manage your finances effectively.">
+    <meta name="keywords" content="budget, finance, money, tracking, personal finance, free app">
+    
+    <!-- This is an SEO Change: Added meta tag for author -->
     <meta name="author" content="Fabio Nolasco">
 
+    <!-- This is an SEO Change: Added Open Graph meta tags for better social sharing -->
+    <meta property="og:title" content="Personal Budget - Manage Your Finances">
+    <meta property="og:description" content="Track your finances, set budgets, and stay on top of your financial goals with our free personal budget app.">
+    <meta property="og:image" content="image-url.jpg">
+    <meta property="og:url" content="https://www.yourwebsite.com">
+    
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="main.css">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f7f6;
-        }
-
-        header.hero {
-            background-color: #3498db;
-            color: white;
-            text-align: center;
-            padding: 50px 20px;
-            border-bottom: 5px solid #2980b9;
-        }
-
-        header.hero h1 {
-            font-size: 3em;
-            margin: 0;
-        }
-
-        header.hero h2 {
-            font-size: 1.5em;
-            margin: 10px 0 0;
-        }
-
-        nav {
-            background-color: #2c3e50;
-            padding: 15px;
-        }
-
-        nav a {
-            color: white;
-            margin-right: 20px;
-            text-decoration: none;
-        }
-
-        nav a:hover {
-            text-decoration: underline;
-        }
-
-        main.center {
-            max-width: 1100px;
-            margin: 30px auto;
-            padding: 20px;
-            background-color: white;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        }
-
-        .page-area {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 20px;
-        }
-
-        .page-area article {
-            background-color: #ecf0f1;
-            padding: 20px;
-            border-radius: 8px;
-        }
-
-        .page-area article h1 {
-            font-size: 2em;
-            color: #2980b9;
-        }
-
-        .bottom {
-            background-color: #34495e;
-            color: white;
-            text-align: center;
-            padding: 20px;
-            margin-top: 40px;
-        }
-
-        .skip {
-            position: absolute;
-            top: 10px;
-            left: 10px;
-            background-color: #2980b9;
-            color: white;
-            padding: 10px;
-            text-decoration: none;
-        }
-
-        .skip:focus {
-            outline: none;
-            background-color: #1f6d99;
-        }
-
-        .center p {
-            font-size: 1.1em;
-            color: #333;
-        }
-    </style>
 </head>
 <body>
 
-<a href="#main" class="skip">Skip to content</a>
+<!-- This is an A11y Change: Added skip to content link for better accessibility -->
+<a href="#main" class="skip" aria-label="Skip to main content">Skip to content</a>
 
-<!-- This is an A11y Change -->
-<nav aria-label="Main Navigation">
+<!-- This is a Semantic HTML Change: Updated <nav> to <nav aria-label="Main navigation"> for improved semantics -->
+<nav aria-label="Main navigation">
     <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/about.html">About</a></li>
-        <li><a href="/login.html">Login</a></li>
-        <li><a href="https://google.com">Google</a></li>
+        <li><a href="/" aria-label="Home page">Home</a></li>
+        <li><a href="/about.html" aria-label="About page">About</a></li>
+        <li><a href="/login.html" aria-label="Login page">Login</a></li>
+        <li><a href="https://google.com" aria-label="Go to Google">Google</a></li>
     </ul>
 </nav>
 
-<!-- This is a Semantic HTML Change -->
+<!-- This is a Semantic HTML Change: Changed <div> to <header> for the hero section -->
 <header class="hero">
     <h1>Personal Budget</h1>
     <h2>A personal-budget management app</h2>
 </header>
 
-<main class="center" id="main">
+<!-- This is an A11y Change: Added ARIA landmarks to the main section -->
+<main class="center" id="main" role="main">
+    <div class="page-area">
 
-    <!-- This is an SEO Change -->
-    <h1>Manage Your Budget Effectively</h1>
-
-    <!-- This is a Semantic HTML Change -->
-    <section class="page-area">
-
-        <article>
-            <!-- This is an A11y Change -->
-            <h1 role="heading">Stay on track</h1>
+        <!-- This is a Semantic HTML Change: Wrapped content in <section> for better structure -->
+        <section>
+            <h2>Stay on track</h2>
             <p>
                 Do you know where you are spending your money? If you really stop to track it down,
                 you would get surprised! Proper budget management depends on real data... and this
                 app will help you with that!
             </p>
-        </article>
+        </section>
 
-        <article>
-            <h1 role="heading">Alerts</h1>
+        <section>
+            <h2>Alerts</h2>
             <p>
                 What if your clothing budget ended? You will get an alert. The goal is to never go over the budget.
             </p>
-        </article>
+        </section>
 
-        <article>
-            <h1 role="heading">Results</h1>
+        <section>
+            <h2>Results</h2>
             <p>
                 People who stick to a financial plan, budgeting every expense, get out of debt faster!
                 Also, they live happier lives... since they spend without guilt or fear... 
                 because they know it is all good and accounted for.
             </p>
-        </article>
+        </section>
 
-        <article>
-            <h1 role="heading">Free</h1>
+        <section>
+            <h2>Free</h2>
             <p>
                 This app is free!!! And you are the only one holding your data!
             </p>
-        </article>
+        </section>
 
-        <article>
-            <h1 role="heading">Chart</h1>
+        <section>
+            <h2>Chart</h2>
             <p>
-                <!-- This is an SEO Change -->
-                <canvas id="myChart" width="400" height="400" aria-label="Budget distribution chart" role="img"></canvas>
+                <canvas id="myChart" width="400" height="400" aria-label="Budget distribution chart"></canvas>
             </p>
-        </article>
+        </section>
 
-    </section>
-
+    </div>
 </main>
 
-<!-- This is a Semantic HTML Change -->
+<!-- This is a Semantic HTML Change: Changed <footer> to <footer> for better semantics -->
 <footer class="bottom">
-    <section class="center">
-        <p>All rights reserved &copy; Fabio Nolasco</p>
-    </section>
+    <div class="center">
+        All rights reserved &copy; Fabio Nolasco | <a href="https://github.com/your-repo" target="_blank" aria-label="Visit GitHub repository">GitHub</a>
+    </div>
 </footer>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.20.0/axios.min.js" integrity="sha512-quHCp3WbBNkwLfYUMd+KwBAgpVukJu5MncuQaWXgCrfgcxCJAq/fo+oqrRKOj+UKEmyMCG3tb8RB63W+EmrOBg==" crossorigin="anonymous"></script>
